feat: Phase 1 Production Readiness - Testing, Documentation, CI/CD
## Testing Infrastructure
- Added tests/test_pep440.rs with version parsing tests
- Updated .gitignore to allow proper test files in tests/ directory
- Created comprehensive testing framework

## Documentation
- Created docs/USER_GUIDE.md - comprehensive user documentation
  - Getting Started (5-minute quickstart)
  - Package Management (install, uninstall, sync)
  - Virtual Environments (create, activate, delete)
  - Project Workflows (init, configuration)
  - SnakeEgg features (nest, eggs, clutches, quantum storage)
  - Configuration (global and project-level)
  - Troubleshooting guide

## CI/CD
- Added .github/workflows/ci.yml
  - Automated testing on push/PR
  - Multi-OS support (Ubuntu, macOS)
  - Clippy linting and formatting checks
  - Code coverage reporting
  - Release artifact building

## Planning
- Created phase1_completion.md with detailed roadmap
  - Testing strategy (85%+ coverage target)
  - CLI command implementation checklist
  - Error handling requirements
  - Performance optimization tasks
  - 6-week timeline with milestones

## Progress Toward Phase 1 Completion
✅ Core features implemented
✅ Documentation framework created
✅ CI/CD pipeline configured
✅ Testing infrastructure started
⏳ Comprehensive test coverage (in progress)
⏳ CLI polish (in progress)

--- a/.gitignore
+++ b/.gitignore
@@ -127,13 +127,15 @@ secrets/
 .gemini/
 .grok/
 
-# Test Files and Outputs
+# Test Files and Outputs (exclude temp test files, keep proper tests)
 test_*.py
-test_*.rs
 *_test.py
-*_test.rs
 test_results.json
 test_output/
+
+# Keep proper integration tests
+!tests/**/*.rs
+!tests/**/*.py
 
 # Editor-Specific (JetBrains, Sublime, Vim, Emacs)
 .idea/
